fix(application-tests): réécriture complète 7 tests UseCase — vraies APIs, imports corrects